# ChangeLog for sys-apps/toybox
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/toybox/ChangeLog,v 1.8 2015/03/06 01:24:59 patrick Exp $

*toybox-0.5.2 (06 Mar 2015)

  06 Mar 2015; Patrick Lauer <patrick@gentoo.org> +toybox-0.5.2.ebuild:
  Bump

*toybox-0.5.1 (20 Nov 2014)

  20 Nov 2014; Patrick Lauer <patrick@gentoo.org> +toybox-0.5.1.ebuild:
  Bump

  19 Oct 2014; Mike Gilbert <floppym@gentoo.org> toybox-0.5.0.ebuild,
  toybox-9999.ebuild:
  A few build fixes, including cross-compile support.

*toybox-0.5.0 (06 Oct 2014)

  06 Oct 2014; Patrick Lauer <patrick@gentoo.org> +toybox-0.5.0.ebuild:
  Bump

*toybox-0.4.9-r1 (29 Aug 2014)

  29 Aug 2014; Patrick Lauer <patrick@gentoo.org> +toybox-0.4.9-r1.ebuild:
  Improved ebuild, using savedconfig and some other nice bits, thanks to
  jbergstroem

*toybox-0.4.9 (09 Jul 2014)

  09 Jul 2014; Patrick Lauer <patrick@gentoo.org> +toybox-0.4.9.ebuild:
  Bump

*toybox-0.4.8 (21 Apr 2014)

  21 Apr 2014; Patrick Lauer <patrick@gentoo.org> +toybox-0.4.8.ebuild:
  Bump

*toybox-9999 (01 Apr 2014)
*toybox-0.4.7 (01 Apr 2014)

  01 Apr 2014; Patrick Lauer <patrick@gentoo.org> +metadata.xml,
  +toybox-0.4.7.ebuild, +toybox-9999.ebuild:
  Initial import, ebuild by me