@@ -11,6 +11,6 @@ EBUILD toybox-0.4.9.ebuild 784 SHA256 0b6ad5cb4ae5ec548e50b4140a515383f150ee8d9b
 EBUILD toybox-0.5.0.ebuild 1255 SHA256 997c34d77bce019963b2f04f386efc6e67d86614ba4473a01db87a434c17cd3c SHA512 d59e675b2d1a71998a2da36d9cfb0915d7648340cdbf6cae2ec131d683391cdd146681f4b8fe406f42c7553b3b60a0330f0c0dda2e026b15585e5746528f2ed9 WHIRLPOOL 00a2dee3d5725625e7490d57406580fbc0279a4c4eb31fe043f97ed0c5be13ed3a0b9317f6696ada67b9fad20005007aea7b7c3fb801b1c345196951a31ed3f9
 EBUILD toybox-0.5.1.ebuild 1255 SHA256 d3919111a5b301adcbb9a041300ef4ea97ca838208fec79531edeeae50f9f202 SHA512 f9f0c2c7bbfc105cac3cd11691fe816c52cb0fcfe936b3c67a42471dcd3ef75312fa435563ea369acfc2b8cb0b8b084b5ffeba8eefb83aa9a8b18fe2312fd6fc WHIRLPOOL 15d85d8c64afe561addcca9cdcafcd2f4ab05205f20da0e3737cfceacbec163bf1ab91952e6d9ae04813992a83330125f15f6f749deac9d8b4d2cb0fb40ac4ac
 EBUILD toybox-0.5.2.ebuild 1254 SHA256 5977eee72e5adc2f9ffdafab39f7fb55711d9a62f9ff8df3cbd8caacf285a438 SHA512 1657c02acc257885f5fe79f00e9625c399af7877622d86bc80ce2b61420081b55ceba77468e53aecd97624e9e4d0bf7abcbec9218631d79046e3e1a216cd5a96 WHIRLPOOL a8a8a836602ac2919b7fc312258a575ba3342a938d58838eac818d64518d77574dd034658d06cc8e621c075ac191bce7b28e797fb7225a5ce505376ea1ea13aa
-EBUILD toybox-9999.ebuild 1254 SHA256 02cee88dedf0492a0a5c06a0bacebe37e327636a6b9140049fcc88e8f227616b SHA512 774bd65715bbbc3703e3cfa947f2e660612197c085519a46e8a711673cbe0d30121d49ee392ec36280671e49fd37ea8c8cbd2a626f83fbbd82eefbe6d9aad719 WHIRLPOOL 582fb3fb1558e24b896d37563dea0bd2494ff2190715a9610cecda3ebf9ce8eede9d3d5161109fdc14eb60afc3bf980cc9eabd05223a01f99b5a97fe108d80b6
-MISC ChangeLog 1288 SHA256 7ddddbea209e75bc7b18ae80a8d669db905ad710da9072f1e1747b69b49e6afa SHA512 7c44dd82f5c1aeca555823fa47acb73fbc0be1a9a524d6515661c9cf05ef45d5785f56eb85625078fdf84b5f96e0164c1098f3a3ff7f5e5020b73106d38a72c7 WHIRLPOOL dcad46a42c6cfabbbb4c630cc25c738e8975a7cf917bc618dd692e3dd13ec7a946f994f926b17caaa3ccade494e270ea077a2a1811662363e0473f669a0dd72b
+EBUILD toybox-9999.ebuild 1257 SHA256 dda43cc9da57e83668c84da72465b1069e26d3638e161c818b1e9d76adc8284a SHA512 86efae65aabf8b613d57a108da922568857964607d904e0b80dbcc1de7f8bd6ddf8425e30c98e9aa418e9553c08ffdd9ce8c7d7bd92510c3e9f71cb9a706708d WHIRLPOOL 1d99a9d2c436980a1b2ea36bf1a784444506786066bca9e15f1173a71a75e537beaf251f1553f95d5f87ef15a5f9022e9b4292cb9f690d0578ab29660250ef93
+MISC ChangeLog 1397 SHA256 44e1f3dc160d71ab425731b2a0b6c9a446a8009b0f29dddf87688ab6cecaa96b SHA512 e97fa4e104f21d8cc0c422db09fc096bb1f7bd278741503ea35d2846259b6fc495d89d46e48d4e113f18433f02814142caae87e1a5c22115183efa44196eb27a WHIRLPOOL 706ce847bbc6e164a6fba70655b8abe87efccb9c428a31c400e29c8d0163ddb6137c033b64a8fc4c0825a0d5fe271f3bace1814cb200f6801d86069534f26db2
 MISC metadata.xml 239 SHA256 57c79f6c1b1b06b8d90265f1cc0affe89b5548b63e811f0313bfb2a0a0aa201a SHA512 1898d4e8bb4f02ffdad555a095ee76f934bd6ee1f914564eac1932f0dd96f26a52f47047324ed0a81009516a84bf72e1b10922fa751f322abf17517f84f62156 WHIRLPOOL 7375ace29b0d9c7e945e141c09b70c79599780bc9d3478e59fbc85dc4330aeda6bf2bb54fde24d25feb181f88618e11e022a90674d1f26ff9ef692bd698ff754
