@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/toybox
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/toybox/ChangeLog,v 1.8 2015/03/06 01:24:59 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/toybox/ChangeLog,v 1.9 2015/04/27 03:01:26 patrick Exp $
+
+  27 Apr 2015; Patrick Lauer <patrick@gentoo.org> toybox-9999.ebuild:
+  Fix git repository location #547504
 
 *toybox-0.5.2 (06 Mar 2015)
 
